Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45856

Windows 8.1: ASSERT when using MultiPointTouchArea

    XMLWordPrintable

Details

    • b59e605b4d2f3c17b8bee0322ba156f990403d2d (qtdeclarative/5.5, 6.5.2015, 5.6)

    Description

      Run the attached example. In debug mode ASSERT and a crash occurs if the images are moved with whole hand. In release the app works.

      ASSERT: "itemForTouchPointId.isEmpty()" in file items\qquickwindow.cpp, line 1992
      

      Attachments

        1. qtbug45856_declarative_diag.diff
          0.8 kB
          Friedemann Kleint
        2. qtbug45856_log.txt
          912 kB
          Friedemann Kleint
        3. qtbug45856_qapp_stack.txt
          19 kB
          Friedemann Kleint
        4. qtbug45856_qtbase_diag.diff
          0.9 kB
          Friedemann Kleint
        5. qtbug45856_quiapp_stack.txt
          18 kB
          Friedemann Kleint
        6. qtbug45856.zip
          6 kB
          Friedemann Kleint
        7. QTBUG-45856.zip
          4 kB
          Qt Support
        For Gerrit Dashboard: QTBUG-45856
        # Subject Branch Project Status CR V

        Activity

          People

            aalpert Alan Alpert
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes